# SSCC-Generator

./: README.md  license.txt  pyproject.toml
sscc_generator/: hooks.py  modules.txt
sscc_generator/sscc_generator/doctype/sscc_settings/: sscc_settings.js  sscc_settings.json  sscc_settings.py  test_sscc_settings.py
